fixed gateway and encounter service with layered configuration, upgraded toab chassis sdk version, reverted syntax to support jdk 1.8, restructured hoverfly simulation configuration management,